Mon Nov 29 13:37:54 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): must not use FILE after fclose().
	  [ruby-dev:24985]

Mon Nov 29 13:13:13 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): push back the last space before next
	  loop because CharNext() eats it.

Mon Nov 29 03:08:30 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (convert_type): [ruby-core:03845]

	* eval.c (rb_funcall_rescue): new function.

	* object.c (rb_Array): avoid using rb_respond_to().

	* object.c (rb_Integer): ditto.

	* eval.c (get_backtrace): no conversion for nil.

	* parse.y (reduce_nodes): empty body should return nil.

Mon Nov 29 01:18:18 2004  Tanaka Akira  <akr@m17n.org>

	* io.c (rb_io_check_writable): call io_seek regardless of
	  NEED_IO_SEEK_BETWEEN_RW.  [ruby-dev:24986]

Sun Nov 28 15:57:58 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::Element#tag): not use block_given? for
	  working with ruby 1.6 again.

	* lib/rss/{0.9,2.0,trackback}.rb, lib/rss/maker/base.rb:
	  undef -> remove_method for working with ruby 1.6 again.

Sun Nov 28 15:51:40 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::NotSetError): added.

	* lib/rss/maker/{1.0,0.9,2.0}.rb: changed RSS Maker to raise
	  RSS::NotSetError if required values of maker.channel are not
	  set. [ruby-talk:120061]

	* test/rss/test_maker_{1.0,0.9,2.0}.rb: changed tests to check RSS
	  Maker raises or not.

Sun Nov 28 12:14:47 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c (fetch_token): fixed test failure on HP-UX ia64
	([ruby-dev:24859]).

Sun Nov 28 12:08:15 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c, test/ruby/test_regexp.rb: fixed problem with UTF-8
	characters that have U+00FE or invalid characters.

Sun Nov 28 12:07:04 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regexec.c, test/ruby/test_regexp.rb: fixed segmentation falut
	([ruby-dev:24887]).
